<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gloom.gloomapp.View.GenreActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="Delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/colorAccent"
        app:showAsAction="always" />

</menu>
