...
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_party" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_parties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_marginBottom="5dp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_add"
...
